training-3/sdc-with-default-stage-libs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdc
  labels:
    app: sdc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdc
  template:
    metadata:
      labels:
        app: sdc
    spec:
      containers:
      - name: sdc
        image: streamsets/datacollector:3.19.1
