training-3/sdc-with-init-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdc
  labels:
    app: sdc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdc
  template:
    metadata:
      labels:
        app: sdc
    spec:
      containers:
      - name: sdc
        image: streamsets/datacollector:3.19.1
        volumeMounts:
        - name: sdc-stage-libs
          mountPath: /opt/streamsets-datacollector-3.19.1/streamsets-libs
          readOnly: "true"
      volumes:
      - name: sdc-stage-libs-list
        configMap:
          name: sdc-stage-libs-list
          items:
            - key: sdc-stage-libs
              path: sdc-stage-libs
            - key: sdc-enterprise-stage-libs
              path: sdc-enterprise-stage-libs
      - name: sdc-stage-libs
        emptyDir: {}
