training-3/sdc-with-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdc
  labels:
    app: sdc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdc
  template:
    metadata:
      labels:
        app: sdc
    spec:
      containers:
      - name: sdc
        image: streamsets/datacollector:3.19.1
        volumeMounts:
        - name: streamsets-libs
          mountPath: /opt/streamsets-datacollector-3.19.1/streamsets-libs
          readOnly: true
        nodeSelector:
          sdc-stage-libs: true
      volumes:
      - name: streamsets-libs
        hostPath:
          path: /streamsets-share/streamsets-libs
          type: Directory
