training-3/sdc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdc-svc
  labels:
    app: sdc-svc
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 18630
    targetPort: 18630
    protocol: TCP
  selector:
    app: sdc
