training-3/sdc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sdc-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - <your host>
    secretName: streamsets-tls
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: sdc-svc
          servicePort: 18630
